# tarski-data

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
tarski/: __init__.py  dataset.py  features.py  plots.py
tarski/modeling/: predict.py  train.py
